# knowledge-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
agent/: agent.py  slack_agent.py
agent/prompts/root/: __init__.py  instruction.py  static_instruction.py
agent/prompts/slack/: __init__.py  instruction.py  static_instruction.py
agent/tools/: __init__.py  draft_note.py  get_note.py  list_notes.py  search_knowledge.py  surface_note.py
backend/: github_client.py  main.py  slack_routes.py
docs/: DEPLOYMENT.md  DEV_SETUP.md  GITHUB_APP_SETUP.md  SLACK_SETUP.md  knowledge-repo-workflow.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: cluster_notes.py
skills/knowledge-note-writer/: SKILL.md
skills/knowledge-searcher/: SKILL.md
